# serial-port-tool

./: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json
.github/workflows/: release.yml
components/: ControlPanel.tsx  HexView.tsx
src/: constants.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ControlPanel.tsx
